--- a/beckMotorApp/BeckhoffSrc/Makefile
+++ b/beckMotorApp/BeckhoffSrc/Makefile
@@ -5,19 +5,22 @@ include $(TOP)/configure/CONFIG
 # The following are used for debugging messages.
 USR_CXXFLAGS += -DDEBUG
 
-DBD += devBeckMotor.dbd
+#will create a support called beckmotor
+LIBRARY_IOC += beckMotor
 
-LIBRARY_IOC = Beck
+#will create a dbd called beckmotor
+DBD += beckMotor.dbd
 
-#SRCS += BeckRegister.cc
+#to be added to beckMotor.dbd
+beckMotor_DBD += devBeckMotor.dbd
 
-# Advanced Control Systems driver support.
-#SRCS += devMCB4B.c drvMCB4B.c
-SRCS += BeckDriver.cpp
-SRCS += BeckPortDriver.cpp
 
-Beck_LIBS += motor asyn
-Beck_LIBS += $(EPICS_BASE_IOC_LIBS)
+# Beckhoff KL2541 driver support.
+beckMotor_SRCS += BeckDriver.cpp
+beckMotor_SRCS += BeckPortDriver.cpp
+
+beckMotor_LIBS += motor
+beckMotor_LIBS += asyn
+beckMotor_LIBS += $(EPICS_BASE_IOC_LIBS)
 
 include $(TOP)/configure/RULES
-
