--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 before_script:
   - yum -y groupinstall "Development Tools"
+  - yum -y install readline-devel
   - git clone https://github.com/darcato/epicsmng.git
   - cd epicsmng
   - sh install.sh
